[gd_scene load_steps=15 format=3 uid="uid://j51i3vf5hn3d"]

[ext_resource type="Script" uid="uid://d33wj2wxlurur" path="res://player/player.gd" id="1_oul6g"]
[ext_resource type="Texture2D" uid="uid://bhsbeiho1ftwj" path="res://player/player.png" id="2_g1dw6"]
[ext_resource type="PackedScene" uid="uid://dgksxox3np48f" path="res://menus/inventory/inventory.tscn" id="3_g1dw6"]
[ext_resource type="Script" uid="uid://cws56lrnieioe" path="res://player/PlayerStateMachine/player_state_machine.gd" id="4_yw30f"]
[ext_resource type="Script" uid="uid://ygoqb4k67vi1" path="res://player/PlayerStateMachine/oxygen_refilling_state.gd" id="5_qjkh3"]
[ext_resource type="Script" uid="uid://bfj0tbm2sub6y" path="res://player/PlayerStateMachine/oxygen_depleting_state.gd" id="6_g6k8r"]
[ext_resource type="Script" uid="uid://by7vkwfrt78qv" path="res://player/PlayerStateMachine/drowning_state.gd" id="7_boad6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qjkh3"]
radius = 6.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g1dw6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rkbax"]

[sub_resource type="LabelSettings" id="LabelSettings_g1dw6"]
font_size = 8

[sub_resource type="Gradient" id="Gradient_g1dw6"]
offsets = PackedFloat32Array(0.50666666, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yw30f"]
gradient = SubResource("Gradient_g1dw6")
width = 640
height = 320
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yw30f"]
font_size = 8

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_oul6g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_qjkh3")

[node name="OxygenBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="OxygenBox"]
shape = SubResource("CapsuleShape2D_g1dw6")

[node name="InteractionBox" type="Area2D" parent="."]
z_index = 1
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionBox"]
shape = SubResource("CapsuleShape2D_rkbax")

[node name="PlayerSprite" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_g1dw6")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="Inventory" parent="UserInterface" instance=ExtResource("3_g1dw6")]

[node name="OxygenMeterLabel" type="Label" parent="UserInterface"]
offset_left = 4.0
offset_top = 164.0
offset_right = 27.0
offset_bottom = 176.0
text = "Oâ‚‚: 20"
label_settings = SubResource("LabelSettings_g1dw6")

[node name="DrowningOverlay" type="Sprite2D" parent="UserInterface"]
texture = SubResource("GradientTexture2D_yw30f")
offset = Vector2(160, 90)

[node name="DrownedOverlay" type="VBoxContainer" parent="UserInterface"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -20.0
offset_right = 26.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="DrownedLabel" type="Label" parent="UserInterface/DrownedOverlay"]
layout_mode = 2
text = "You Drowned"
label_settings = SubResource("LabelSettings_yw30f")

[node name="RespawnButton" type="Button" parent="UserInterface/DrownedOverlay"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 4
text = "Respawn"

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("4_yw30f")
current_state = NodePath("OxygenDepletingState")

[node name="OxygenRefillingState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_qjkh3")

[node name="OxygenDepletingState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_g6k8r")

[node name="DrowningState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_boad6")

[node name="DrowningTimer" type="Timer" parent="PlayerStateMachine/DrowningState"]
one_shot = true

[connection signal="pressed" from="UserInterface/DrownedOverlay/RespawnButton" to="." method="_on_respawn_button_pressed"]
[connection signal="timeout" from="PlayerStateMachine/DrowningState/DrowningTimer" to="PlayerStateMachine/DrowningState" method="_on_drowning_timer_timeout"]
